# sbts-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sbts/: __init__.py  sbts.py
tests/: test_sbts.py
tests/fixtures/: S_BTS2048_multi.xls  S_BTS2048_single.xls  S_BTS256_single.xls
